--- a/src/data_structures/vector.org
+++ b/src/data_structures/vector.org
@@ -38,6 +38,7 @@ Variables like ${variable} are expanded by bash.
      integer(int32) :: size_ = 0, capa_ = 0
    contains
      procedure, pass :: init      => init_${uwvec}
+     procedure, pass :: with_capacity => with_capacity_${uwvec}
      procedure, pass :: push_back_${uwvec}, &
           push_back_array_${uwvec}
      generic         :: push_back => push_back_${uwvec}, &
@@ -101,6 +102,21 @@ Variables like ${variable} are expanded by bash.
     end if
   end subroutine init_${uwvec}
 #+end_src
+***** with_capacity
+=subroutine with_capacity= initialize unwrapped_vector by size of capacity.
+#+name: with_capacity-unwrapped_vector
+#+begin_src fortran :exports code :noweb no-export
+  !> with_capacity_${uwvec}: Initialize the ${uwvec} by size.
+  subroutine with_capacity_${uwvec}(this, n)
+    class(${uwvec}), intent(inout) :: this
+    integer(int32), intent(in) :: n
+    if (.not. allocated(this%arr_)) then
+       allocate(this%arr_(n))
+       this%size_ = 0
+       this%capa_ = n
+    end if
+  end subroutine with_capacity_${uwvec}
+#+end_src
 ***** push_back
 =subroutine push_back= insert value to the tail of elements of the unwrapped vector.
 #+name: push_back-unwrapped_vector
@@ -109,7 +125,7 @@ Variables like ${variable} are expanded by bash.
   subroutine push_back_${uwvec}(this, val)
     class(${uwvec}), intent(inout) :: this
     ${type}, intent(in) :: val
-    if (.not. allocated(this%arr_)) call this%resize(0)
+    if (.not. allocated(this%arr_)) call this%with_capacity(1)
     if (this%size_ == this%capa_) then
        call this%resize(2*this%capa_)
     end if
@@ -122,7 +138,8 @@ Variables like ${variable} are expanded by bash.
     ${type}, intent(in) :: arr(:)
     integer(int32) :: s
     s = size(arr)
-    if (.not. allocated(this%arr_)) call this%init(s)
+    if (.not. allocated(this%arr_)) &
+         call this%with_capacity(s)
     if (this%size_ + s > this%capa_) then
        call this%resize(this%size_ + s)
     end if
@@ -287,6 +304,13 @@ Variables like ${variable} are expanded by bash.
        call v2%push_back(i)
        <<../Implementations.org:assert(cond="v2%back() == i", code=23, message="Resize or back for `v2` is illegal.")>>
     end do
+    block
+      type(unwrapped_vector_int32) :: v3
+      integer(int32) :: arr(5)
+      arr(:) = [(i, i = 1, size(arr))]
+      call v3%push_back(arr)
+      <<../Implementations.org:assert(cond="all(v3%arr_(1:v3%size()) == arr(:))", code=24, message="push_back_arr for `v3` is illegal.")>>
+    end block
   end program test_unwrapped_vector
 #+end_src
 #+name: test-unwrapped_vector
